--- a/invoice3.html
+++ b/invoice3.html
@@ -166,7 +166,8 @@ button{
 <div class="kop">
 <img src="./logo.png">
 <div>
-<h2>PT WIJAYA ANUGRAH TEKNIK</h2>
+<h2>PT PUTERA NIRWANA SEJAHTERA</h2>
+<p><b>Unit usaha dari PT.WIJAYA ANUGRAH TEKNIK</b></p>
 <p><b>Spesialis Sistem Pendingin</b></p>
 <p style="font-size:11px">
 Jl. H Rean Pamulang – Tangerang Selatan<br>
@@ -250,7 +251,7 @@ Tanggal:<br><input type="date" id="tanggal">
 <div class="payment">
 <b>Pembayaran:</b><br>
 BCA 2190116851<br>
-A/N PT WIJAYA ANUGRAH TEKNIK
+A/N RONI WIJAYA
 </div>
 
 <div class="note">
@@ -358,3 +359,4 @@ async function generatePDF(){
 
 </body>
 </html>
+
