--- a/invoice3.html
+++ b/invoice3.html
@@ -166,7 +166,7 @@ button{
 <div class="kop">
 <img src="./logo.png">
 <div>
-<h2>PT PUTERA NIRWANA SEJAHTERA</h2>
+<h2>PT PUTRA NIRWANA SEJAHTERA</h2>
 <p><b>Unit usaha dari PT.WIJAYA ANUGRAH TEKNIK</b></p>
 <p><b>Spesialis Sistem Pendingin</b></p>
 <p style="font-size:11px">
@@ -359,4 +359,5 @@ async function generatePDF(){
 
 </body>
 </html>
+
 
