--- a/invoice3.html
+++ b/invoice3.html
@@ -166,11 +166,12 @@ button{
 <div class="kop">
 <img src="./logo.png">
 <div>
-<h2>PT PUTRA NIRWANA SEJAHTERA</h2>
-<p><b>Unit usaha dari PT.WIJAYA ANUGRAH TEKNIK</b></p>
-<p><b>Spesialis Sistem Pendingin</b></p>
+<h2>PT PUTERA NIRWANA SEJAHTERA</h2>
+<p><b>SPECIALIST AIR CONDITIONER</b></p>
+<p><b>PERAWATAN - PERBAIKAN - PENGADAAN UNIT</b></p>
+<p>Unit usaha dari PT.WIJAYA ANUGRAH TEKNIK</b></p>
 <p style="font-size:11px">
-Jl. H Rean Pamulang – Tangerang Selatan<br>
+Jl. H Rean, Benda baru, Pamulang – Tangerang Selatan<br>
 WA : 0811-8011-436
 </p>
 </div>
@@ -359,5 +360,4 @@ async function generatePDF(){
 
 </body>
 </html>
-
 
